--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
             "styles": [
               "node_modules/minireset.css/minireset.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
@@ -98,8 +97,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
