--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.11.24",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
